Good Amount Done
Theory inside GameConst.cs

--- a/RunOrGunGameBot/Pages/Index.razor
+++ b/RunOrGunGameBot/Pages/Index.razor
@@ -62,6 +62,7 @@
             BuildDate();
             BuildHTML();
             ShowModal();
+            BotSettings.BotLogList.Add(new BotLog(Tag, "Row Clicked"));
         }
         catch (Exception exception)
         {
